emulation: Revise the extended color escape sequences

Add support for true color sequences according to ITU-T T.416,
i.e. CSI 38:2:[color_space_id]:R:G:B[:more_params]m. Color space id
and further parameters are ignored.

Keep support for the misinterpreted CSI 38:2:R:G:Bm format (missing
color space id) for now, to be dropped at some point in the future.

Keep support for 256-color sequences according to ITU-T T.416,
i.e. CSI 38:5:INDEXm. Allow and ignore further parameters.

Keep support for the de facto standard CSI 38;2;R;G;Bm and CSI 38;5;INDEXm
supported by most terminal emulators and emitted by most apps.

Drop support for mixed use of semicolons and colons.

Add command line flags to perf/256test.sh and perf/img.sh to select the
emitted sequences, switch to the de jure format as default.

https://bugzilla.gnome.org/show_bug.cgi?id=791456