src/vteinternal.hh
@@ -1322,7 +1322,8 @@ public:
         inline void erase_characters(long count);
         inline void insert_blank_character();
         inline int32_t parse_sgr_38_48_parameters(vte::parser::Params const& params,
-                                                  unsigned int *index);
+                                                  unsigned int *index,
+                                                  bool might_contain_color_space_id);
         inline void move_cursor_backward(vte::grid::column_t columns);
         inline void move_cursor_forward(vte::grid::column_t columns);
         inline void move_cursor_tab();
